--- a/biography/index.html
+++ b/biography/index.html
@@ -86,7 +86,7 @@
 <p>China</p>
 <h1 id="education">Education</h1>
 <ul>
-<li><a href="https://www.ruc.edu.cn">Renmin Universit of China</a>, 2017-2021, BEng in Environmental Enigneering</li>
+<li><a href="https://www.ruc.edu.cn">Renmin University of China</a>, 2017-2021, BEng in Environmental Enigneering</li>
 <li><a href="http://www.yali.hn.cn">Yali High School</a>, 2014-2017</li>
 <li>Shaoyang No.5 Middle School, 2011-2014</li>
 <li>Zijiang School of Shaoyang City, 2005-2011</li>
@@ -153,6 +153,8 @@
             </div>
             <div class="nav-next">
                 
+                <a class="next" href="https://danyangjiang-owo.github.io/projects/"> Projects</a>
+                
             </div>
         </div>
     </nav>
@@ -185,13 +187,13 @@
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/projects/">Projects</a>
+            </li>
+            <li>
                 <a href="/biography/">Biography</a>
             </li>
             <li>
                 <a href="/more-about-me/">More about me</a>
-            </li>
-            <li>
-                <a href="/projects/">Projects</a>
             </li>
             <li>
                 <a href="/publications/">Publications</a>
