--- a/more-about-me/index.html
+++ b/more-about-me/index.html
@@ -130,7 +130,7 @@
         <div class="nav-links">
             <div class="nav-previous">
                 
-                <a class="previous" href="https://danyangjiang-owo.github.io/projects/"> Projects</a>
+                <a class="previous" href="https://danyangjiang-owo.github.io/publications/"> Publications</a>
                 
             </div>
             <div class="nav-next">
@@ -169,13 +169,13 @@
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/projects/">Projects</a>
+            </li>
+            <li>
                 <a href="/biography/">Biography</a>
             </li>
             <li>
                 <a href="/more-about-me/">More about me</a>
-            </li>
-            <li>
-                <a href="/projects/">Projects</a>
             </li>
             <li>
                 <a href="/publications/">Publications</a>
