--- a/more-about-me/index.html
+++ b/more-about-me/index.html
@@ -135,7 +135,7 @@
             </div>
             <div class="nav-next">
                 
-                <a class="next" href="https://danyangjiang-owo.github.io/biography/"> Biography</a>
+                <a class="next" href="https://danyangjiang-owo.github.io/projects/"> Projects</a>
                 
             </div>
         </div>
@@ -172,13 +172,13 @@
                 <a href="/projects/">Projects</a>
             </li>
             <li>
-                <a href="/biography/">Biography</a>
-            </li>
-            <li>
                 <a href="/more-about-me/">More about me</a>
             </li>
             <li>
                 <a href="/publications/">Publications</a>
+            </li>
+            <li>
+                <a href="/biography/">Biography</a>
             </li>
         </ul>
     </aside>
