--- a/projects/index.html
+++ b/projects/index.html
@@ -129,7 +129,7 @@
         <div class="nav-links">
             <div class="nav-previous">
                 
-                <a class="previous" href="https://danyangjiang-owo.github.io/biography/"> Biography</a>
+                <a class="previous" href="https://danyangjiang-owo.github.io/more-about-me/"> More about me</a>
                 
             </div>
             <div class="nav-next">
@@ -169,13 +169,13 @@
                 <a href="/projects/">Projects</a>
             </li>
             <li>
-                <a href="/biography/">Biography</a>
-            </li>
-            <li>
                 <a href="/more-about-me/">More about me</a>
             </li>
             <li>
                 <a href="/publications/">Publications</a>
+            </li>
+            <li>
+                <a href="/biography/">Biography</a>
             </li>
         </ul>
     </aside>
