--- a/projects/index.html
+++ b/projects/index.html
@@ -134,6 +134,8 @@
             </div>
             <div class="nav-next">
                 
+                <a class="next" href="https://danyangjiang-owo.github.io/biography/"> Biography</a>
+                
             </div>
         </div>
     </nav>
@@ -166,6 +168,9 @@
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/biography/">Biography</a>
+            </li>
+            <li>
                 <a href="/projects/">Projects</a>
             </li>
             <li>
@@ -173,9 +178,6 @@
             </li>
             <li>
                 <a href="/publications/">Publications</a>
-            </li>
-            <li>
-                <a href="/biography/">Biography</a>
             </li>
         </ul>
     </aside>
