--- a/biography/index.html
+++ b/biography/index.html
@@ -86,7 +86,7 @@
 <p>China</p>
 <h1 id="education">Education</h1>
 <ul>
-<li><a href="https://www.ruc.edu.cn">Renmin University of China</a>, 2017-2021, BEng in Environmental Enigneering</li>
+<li><a href="https://www.ruc.edu.cn">Renmin University of China</a>, 2017-now, BEng in Environmental Enigneering</li>
 <li><a href="http://www.yali.hn.cn">Yali High School</a>, 2014-2017</li>
 <li>Shaoyang No.5 Middle School, 2011-2014</li>
 <li>Zijiang School of Shaoyang City, 2005-2011</li>
