--- a/publications/index.html
+++ b/publications/index.html
@@ -123,7 +123,7 @@
             </div>
             <div class="nav-next">
                 
-                <a class="next" href="https://danyangjiang-owo.github.io/more-about-me/"> More about me</a>
+                <a class="next" href="https://danyangjiang-owo.github.io/projects/"> Projects</a>
                 
             </div>
         </div>
@@ -160,10 +160,10 @@
                 <a href="/biography/">Biography</a>
             </li>
             <li>
-                <a href="/projects/">Projects</a>
+                <a href="/more-about-me/">More about me</a>
             </li>
             <li>
-                <a href="/more-about-me/">More about me</a>
+                <a href="/projects/">Projects</a>
             </li>
             <li>
                 <a href="/publications/">Publications</a>
