--- a/more-about-me/index.html
+++ b/more-about-me/index.html
@@ -83,7 +83,7 @@
             <h1 id="photography-cats">Photography (&amp;Cats)</h1>
 <p><strong>Nov 08, 2019 @TANGO Live house, Beijing</strong></p>
 <p><img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb6mvpfb46j31400u075p.jpg" alt="141579772317_.pic_hd"></p>
-<p>One of my favourite music group: Humbert Humbert (ハンーバト　ハンーバト). I fortuantely bought my favourite CD before the show.</p>
+<p>One of my favourite music group: Humbert Humbert (ハンバート　ハンバート). I fortuantely bought my favourite CD before the show.</p>
 <p><strong>Aug 05, 2019 @Fayuan Temple, Beijing</strong></p>
 <p><img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb6me83lnfj31900u0q77.jpg" alt="101579771428_.pic_hd"></p>
 <p><img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb6mlu2xpmj31900u0e82.jpg" alt="131579771447_.pic_hd"></p>
